[gd_scene load_steps=12 format=3 uid="uid://bxk13asxg0jdk"]

[ext_resource type="Script" path="res://enemies/EnemyBoss.gd" id="1_c3y6t"]
[ext_resource type="Texture2D" uid="uid://cum7egiccafo8" path="res://assets/enemies/boss-Sheet.png" id="1_xfd3b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pbbao"]
atlas = ExtResource("1_xfd3b")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kaj8"]
atlas = ExtResource("1_xfd3b")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5oxmw"]
atlas = ExtResource("1_xfd3b")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lctb2"]
atlas = ExtResource("1_xfd3b")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmc60"]
atlas = ExtResource("1_xfd3b")
region = Rect2(400, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_iruta"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbbao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kaj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oxmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lctb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmc60")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5aqgf"]
size = Vector2(383, 305)

[sub_resource type="Curve2D" id="Curve2D_d02ds"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 2129.07, -2077.09, 0, 0, 0, 0, 2129.07, 1637.15, 0, 0, 0, 0, -1312.64, 1637.15, 0, 0, 0, 0, -1320.69, -2071.78, 0, 0, 0, 0, 2091.48, -2071.78)
}
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vyrov"]
size = Vector2(438, 314)

[node name="EnemyBoss" type="CharacterBody2D"]
position = Vector2(2, 30)
script = ExtResource("1_c3y6t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(3.97, 3.97)
sprite_frames = SubResource("SpriteFrames_iruta")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.179798

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5aqgf")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -230.0
offset_right = 68.0
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-0.384354, 22.2666)
scale = Vector2(-0.0184633, 0.00640347)
curve = SubResource("Curve2D_d02ds")

[node name="ProjectilePath" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(2129.07, -2077.09)
rotation = 1.5708

[node name="ProjectileSpawn" type="Marker2D" parent="Path2D/ProjectilePath"]
unique_name_in_owner = true

[node name="BossHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossHitBox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_vyrov")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
